# TemporEngine

./: .gitignore  .gitmodules  CMakeLists.txt  analyze.sh  build-and-run.sh  build.sh  different-on-windows.txt
include/: plugin.h  plugin_core.h
plugins/test/: CMakeLists.txt  plugin.cpp
src/: arg_parser.hpp  bootstrap.cpp  core.hpp  io.hpp  logger.hpp  main.cpp  tempor.cpp  tempor.hpp  window_manager.cpp  window_manager.hpp
src/asset_store/: CMakeLists.txt  asset_store.cpp  asset_store.hpp
src/data_bridge/: CMakeLists.txt  data_bridge.cpp  data_bridge.hpp
src/gpu_backends/: gpu_backend.hpp
src/gpu_backends/vulkan_backend/: CMakeLists.txt  swapchain.cpp  vulkan_backend.cpp  vulkan_backend.hpp
src/gui/: CMakeLists.txt  gui_processor.cpp  gui_processor.hpp
src/hardware_layer_interface/: CMakeLists.txt  hardware_common_structs.hpp  hardware_layer_interface.hpp
src/hardware_layer_interface/layers/vulkan/: CMakeLists.txt  hardware_layer.cpp  hardware_layer.hpp  swapchain.cpp
src/hardware_layer_interface/layers/vulkan/shaders/: gui.vert
src/hardware_memory_optimizator/: CMakeLists.txt  hardware_memory_optimizator.cpp  hardware_memory_optimizator.hpp  hwmo.hpp
src/irenderer/: CMakeLists.txt  common_types.hpp  irenderer.hpp
src/irenderer/renderers/renderer_vulkan/: CMakeLists.txt  renderer_vulkan.cpp  renderer_vulkan.hpp  swapchain.cpp
src/irenderer/renderers/renderer_vulkan/shaders/: debug_lines.vert  gui.frag
src/logger/: CMakeLists.txt  logger.cpp  logger.hpp
src/plugin_launcher/: CMakeLists.txt  plugin.hpp  plugin_launcher.cpp  plugin_launcher.hpp
src/plugin_loader/: CMakeLists.txt  plugin_loader.cpp  plugin_loader.hpp  plugin_wrapper.cpp  plugin_wrapper.hpp
src/renderer/: CMakeLists.txt  common_types.hpp  renderer.hpp
src/renderer/renderer_vulkan/: CMakeLists.txt  renderer_vulkan.cpp  renderer_vulkan.hpp  swapchain.cpp
src/resource_registry/: CMakeLists.txt  resource_registry.cpp  resource_registry.hpp
src/scene_graph/: CMakeLists.txt  scene_graph.cpp  scene_graph.hpp
src/scene_manager/: CMakeLists.txt  archetype.hpp  scene_manager.cpp  scene_manager.hpp
src/tempor_engine/: CMakeLists.txt  sleep_clock.hpp  tempor.cpp  tempor.hpp  tempor_api.cpp  tempor_api.hpp
src/utils/: CMakeLists.txt
src/utils/gui/: gui_processor.cpp  gui_processor.hpp  tpml_parser.cpp
src/utils/io/: io.cpp  io.hpp
src/utils/logger/: logger.hpp
src/utils/vfs/: vfs.cpp  vfs.hpp
src/utils/window_manager/: window_manager.hpp
src/vulkan/: CMakeLists.txt  backend.cpp  backend.hpp  swapchain.cpp
src/window_manager/: CMakeLists.txt  window_manager.cpp  window_manager.hpp
test/: 1load.blend  1load.blend1  config.json  imgui.ini  launch-test.sh  launch.sh  lsan-leaks.txt  settings.json  tp-gui-schema.json  tp-gui-schema.tpml  tp-main.json
test/plugins/test/: model.blend  model.blend1  model.gltf
test/shaders/: debug_lines.vert.spv
test/shaders/vulkan/: gui.vert.spv
test_plugin/: CMakeLists.txt  plugin.cpp
test_template/: config.json
